@@ -5,4 +5,3 @@ BOX3D(0 0.1 -3,11 12 12)
 19695
 15063
 10431
-0.528602749909894
