@@ -4,6 +4,7 @@ PostGIS 1.1.1CVS
 	- Solaris 2.7 and MingW support improvements
 	- added NumInteriorRing() alias due to OpenGIS ambiguity
 	- BUGFIX in geometrycollection handling of GEOS-CAPI connector
+	- BUGFIX in line_locate_point()
 
 PostGIS 1.1.0
 2005/12/21
